# event-strawberry

./: Procfile  notebook.ipynb  pyproject.toml  requirements.txt
back/: settings.py  urls.py
back/accounts/: apps.py  models.py
back/accounts/migrations/: 0001_initial.py  0002_alter_customuser_bio.py
back/events/: admin.py  apps.py  models.py  permissions.py  resolvers.py  schema.py  types.py  utils.py
back/events/migrations/: 0001_initial.py  0002_auto_20210807_0055.py
python_scripts/: django_initializer.py
